Labs/Lab_2/testParser.py
# Generated from test.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class testParser ( Parser ):

    grammarFileName = "test.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "IMMEDIATE", "REG", "COMMAND", "MEMORY", 
                      "NEWLINE", "COMMA", "SPACE" ]

    RULE_expr = 0
    RULE_start = 1

    ruleNames =  [ "expr", "start" ]

    EOF = Token.EOF
    IMMEDIATE=1
    REG=2
    COMMAND=3
    MEMORY=4
    NEWLINE=5
    COMMA=6
    SPACE=7

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMAND(self):
            return self.getToken(testParser.COMMAND, 0)

        def SPACE(self, i:int=None):
            if i is None:
                return self.getTokens(testParser.SPACE)
            else:
                return self.getToken(testParser.SPACE, i)

        def REG(self, i:int=None):
            if i is None:
                return self.getTokens(testParser.REG)
            else:
                return self.getToken(testParser.REG, i)

        def COMMA(self):
            return self.getToken(testParser.COMMA, 0)

        def MEMORY(self):
            return self.getToken(testParser.MEMORY, 0)

        def IMMEDIATE(self):
            return self.getToken(testParser.IMMEDIATE, 0)

        def getRuleIndex(self):
            return testParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = testParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_expr)
        try:
            self.state = 35
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 4
                self.match(testParser.COMMAND)
                self.state = 5
                self.match(testParser.SPACE)
                self.state = 6
                self.match(testParser.REG)
                self.state = 7
                self.match(testParser.COMMA)
                self.state = 8
                self.match(testParser.SPACE)
                self.state = 9
                self.match(testParser.MEMORY)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 10
                self.match(testParser.COMMAND)
                self.state = 11
                self.match(testParser.SPACE)
                self.state = 12
                self.match(testParser.MEMORY)
                self.state = 13
                self.match(testParser.COMMA)
                self.state = 14
                self.match(testParser.SPACE)
                self.state = 15
                self.match(testParser.REG)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 16
                self.match(testParser.COMMAND)
                self.state = 17
                self.match(testParser.SPACE)
                self.state = 18
                self.match(testParser.REG)
                self.state = 19
                self.match(testParser.COMMA)
                self.state = 20
                self.match(testParser.SPACE)
                self.state = 21
                self.match(testParser.REG)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 22
                self.match(testParser.COMMAND)
                self.state = 23
                self.match(testParser.SPACE)
                self.state = 24
                self.match(testParser.MEMORY)
                self.state = 25
                self.match(testParser.COMMA)
                self.state = 26
                self.match(testParser.SPACE)
                self.state = 27
                self.match(testParser.IMMEDIATE)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 28
                self.match(testParser.COMMAND)
                self.state = 29
                self.match(testParser.SPACE)
                self.state = 30
                self.match(testParser.REG)
                self.state = 31
                self.match(testParser.COMMA)
                self.state = 32
                self.match(testParser.SPACE)
                self.state = 33
                self.match(testParser.IMMEDIATE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 34
                self.match(testParser.COMMAND)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(testParser.ExprContext)
            else:
                return self.getTypedRuleContext(testParser.ExprContext,i)


        def getRuleIndex(self):
            return testParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = testParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==testParser.COMMAND:
                self.state = 37
                self.expr()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





